--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ server.tomcat.uri-encoding = UTF-8
 converted.file.charset = GBK
 #======================================#文件上传限制#======================================#
 spring.http.multipart.max-file-size=100MB
+## 支持的类文本格式的文件类型
+simText = txt,html,xml,java,properties,mp3,mp4,sql
