更新jar依赖问题

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>com.yudianbank</groupId>
-            <artifactId>jodconverter</artifactId>
+            <artifactId>jodconverter-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
