修复resources资源目录不加载的问题

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -153,7 +153,7 @@
     <build>
         <resources>
             <resource>
-                <directory>jodconverter-web/src/main/resources</directory>
+                <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*</include>
                 </includes>
