新增spring boot profile多文件支持

--- a/jodconverter-web/src/main/resources/application.properties
+++ b/jodconverter-web/src/main/resources/application.properties
@@ -10,16 +10,6 @@ spring.freemarker.expose-request-attributes = true
 spring.freemarker.expose-session-attributes = true
 spring.freemarker.request-context-attribute = request
 spring.freemarker.suffix = .ftl
-#=============================================#spring Redisson配置#===================================#
-spring.redisson.address = 192.168.1.204:6379
-##资源映射路径(因为jar方式运行的原因)
-file.dir = C:\\Users\\yudian\\Desktop\\dev\\
-spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.dir}
-## openoffice相关配置
-office.home = C:\\Program Files (x86)\\OpenOffice 4
-server.tomcat.uri-encoding = UTF-8
-converted.file.charset = GBK
-#======================================#文件上传限制#======================================#
-spring.http.multipart.max-file-size=100MB
-## 支持的类文本格式的文件类型
-simText = txt,html,xml,java,properties,mp3,mp4,sql
+
+#默认环境
+spring.profiles.active=dev
