舍弃缩略图，优化多图片预览轮播效率问题

--- a/jodconverter-web/src/main/resources/application-dev.properties
+++ b/jodconverter-web/src/main/resources/application-dev.properties
@@ -9,5 +9,6 @@ server.tomcat.uri-encoding = UTF-8
 converted.file.charset = GBK
 #======================================#文件上传限制#======================================#
 spring.http.multipart.max-file-size=100MB
+spring.http.multipart.max-request-size=100MB
 ## 支持的类文本格式的文件类型
 simText = txt,html,xml,java,properties,mp3,mp4,sql
