--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -48,7 +48,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.yudianbank</groupId>
+            <groupId>cn.keking</groupId>
             <artifactId>jodconverter-core</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
