--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yudianbank</groupId>
+    <groupId>cn.keking</groupId>
     <artifactId>filepreview</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
