1.修复不支持文件类型提示时抛异常的问题 2.添加多媒体文件预览支持，如mp4，mp3等文件

--- a/jodconverter-web/src/main/resources/application-dev.properties
+++ b/jodconverter-web/src/main/resources/application-dev.properties
@@ -1,14 +1,15 @@
-#=============================================#spring RedissonÅäÖÃ#===================================#
-spring.redisson.address = 192.168.1.204:6379
-##×ÊÔ´Ó³ÉäÂ·¾¶(ÒòÎªjar·½Ê½ÔËÐÐµÄÔ­Òò)
-file.dir = C:\\Users\\yudian\\Desktop\\dev\\
+#=============================================#spring Redissonï¿½ï¿½ï¿½ï¿½#===================================#
+spring.redisson.address = 127.0.0.1:6379
+##ï¿½ï¿½Ô´Ó³ï¿½ï¿½Â·ï¿½ï¿½(ï¿½ï¿½Îªjarï¿½ï¿½Ê½ï¿½ï¿½ï¿½Ðµï¿½Ô­ï¿½ï¿½)
+file.dir = /Users/chenkailing/test/
 spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.dir}
-## openofficeÏà¹ØÅäÖÃ
-office.home = C:\\Program Files (x86)\\OpenOffice 4
+## openofficeï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+office.home = /Applications/LibreOffice.app/Contents
 server.tomcat.uri-encoding = UTF-8
 converted.file.charset = GBK
-#======================================#ÎÄ¼þÉÏ´«ÏÞÖÆ#======================================#
+#======================================#ï¿½Ä¼ï¿½ï¿½Ï´ï¿½ï¿½ï¿½ï¿½ï¿½#======================================#
 spring.http.multipart.max-file-size=100MB
 spring.http.multipart.max-request-size=100MB
-## Ö§³ÖµÄÀàÎÄ±¾¸ñÊ½µÄÎÄ¼þÀàÐÍ
-simText = txt,html,xml,java,properties,mp3,mp4,sql
+## Ö§ï¿½Öµï¿½ï¿½ï¿½ï¿½Ä±ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½
+simText = txt,html,xml,java,properties,sql
+media=mp3,mp4,flv,rmvb
