--- a/jodconverter-web/src/main/resources/application-prod.properties
+++ b/jodconverter-web/src/main/resources/application-prod.properties
@@ -1,18 +1,19 @@
-#=============================================#spring RedissonÅäÖÃ#===================================#
+#=============================================#spring Redissonï¿½ï¿½ï¿½ï¿½#===================================#
 spring.redisson.address = 10.19.140.7:6379
 spring.redisson.database = 0
-##×ÊÔ´Ó³ÉäÂ·¾¶(ÒòÎªjar·½Ê½ÔËĞĞµÄÔ­Òò)
+##ï¿½ï¿½Ô´Ó³ï¿½ï¿½Â·ï¿½ï¿½(ï¿½ï¿½Îªjarï¿½ï¿½Ê½ï¿½ï¿½ï¿½Ğµï¿½Ô­ï¿½ï¿½)
 file.dir = /data/file-preview/convertedFile/
 spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.dir}
-## openofficeÏà¹ØÅäÖÃ
+## openofficeï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 office.home = /opt/openoffice4
 
-## ±àÂëÉèÖÃ
+## ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 server.tomcat.uri-encoding = utf-8
 converted.file.charset = utf-8
-## ÎÄ¼şÉÏ´«×î´óÖµ
+## ï¿½Ä¼ï¿½ï¿½Ï´ï¿½ï¿½ï¿½ï¿½Öµ
 spring.http.multipart.max-file-size = 100MB
 
-## Ö§³ÖµÄÀàÎÄ±¾¸ñÊ½µÄÎÄ¼şÀàĞÍ
-simText = txt,html,xml,java,properties,sql,js,md,json,conf,ini,vue,php,py,bat,gitignore,log,htm,mp3,mp4,css,cnf
+## Ö§ï¿½Öµï¿½ï¿½ï¿½ï¿½Ä±ï¿½ï¿½ï¿½Ê½ï¿½ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½ï¿½ï¿½
+simText = txt,html,xml,java,properties,sql,js,md,json,conf,ini,vue,php,py,bat,gitignore,log,htm,css,cnf
 
+media=mp3,mp4,flv
