缓存及队列实现抽象，提供JDK和REDIS两种实现

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -149,6 +149,11 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+            <artifactId>concurrentlinkedhashmap-lru</artifactId>
+            <version>1.4.2</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
