--- a/jodconverter-web/src/main/resources/application-dev.properties
+++ b/jodconverter-web/src/main/resources/application-dev.properties
@@ -1,5 +1,3 @@
-#redis连接
-spring.redisson.address = 192.168.1.204:6379
 ##资源映射路径
 file.dir = C:\\Users\\yudian\\Desktop\\dev\\
 spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.dir}
@@ -13,3 +11,6 @@ spring.http.multipart.max-file-size=100MB
 simText = txt,html,xml,java,properties,mp3,mp4,sql
 #多媒体类型
 media=mp3,mp4,flv,rmvb
+#缓存及队列实现类型，默认为JDK实现，可选redis(需要加spring.redisson.address等配置)
+#cache.type = redis
+#spring.redisson.address = 192.168.1.204:6379
