启动脚本&配置文件

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -164,6 +164,9 @@
                 </includes>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>src/main/conf</directory>
+            </resource>
         </resources>
         <plugins>
             <plugin>
