支持部分配置在运行时动态改变

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -1,3 +1,4 @@
+#######################################不可动态配置，需要重启生效#######################################
 server.port = 8012
 spring.http.encoding.charset = utf8
 ## Freemarker 配置
@@ -17,14 +18,18 @@ spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/re
 ## openoffice home路径
 office.home = C:\\Program Files (x86)\\OpenOffice 4
 server.tomcat.uri-encoding = UTF-8
-converted.file.charset = GBK
 #文件上传限制
 spring.http.multipart.max-file-size=100MB
-##文本类型
-simText = txt,html,xml,java,properties,mp3,mp4,sql
-#多媒体类型
-media=mp3,mp4,flv,
+
 #缓存实现类型，不配默认为JDK实现，可配置为redis实现（需要配置spring.redisson.address等参数）
 #cache.type = redis
 #redis连接
 #spring.redisson.address = 192.168.1.204:6379
+
+#######################################可在运行时动态配置#######################################
+##文本类型
+simText = txt,html,xml,java,properties,mp3,mp4,sql
+#多媒体类型
+media=mp3,mp4,flv,
+#文件转换编码
+converted.file.charset = GBK
