--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -167,7 +167,7 @@
             <resource>
                 <directory>src/main/conf</directory>
                 <excludes>
-                    <exclude></exclude>
+                    <exclude>${build.exclude.resource}</exclude>
                 </excludes>
             </resource>
         </resources>
