file.Dir变为选配置添加其默认值

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -12,14 +12,14 @@ spring.freemarker.expose-session-attributes = true
 spring.freemarker.request-context-attribute = request
 spring.freemarker.suffix = .ftl
 
-##资源映射路径
-file.dir = D:\\kkFileview\\
-spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${file.dir}
-##openoffice home路径
-#office.home = C:\\Program Files (x86)\\OpenOffice 4
 server.tomcat.uri-encoding = UTF-8
 #文件上传限制
 spring.http.multipart.max-file-size=100MB
+
+#文件资源路径（默认为打包根路径下的file目录下）
+#file.dir = D:\\kkFileview\\
+#openoffice home路径
+#office.home = C:\\Program Files (x86)\\OpenOffice 4
 
 #缓存实现类型，不配默认为JDK实现，可配置为redis实现（需要配置spring.redisson.address等参数）
 #cache.type = redis
