文件转换编码默认根据操作系统获取，变为可选配置 文本和多媒体类型添加默认值，变为可选配置

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -27,9 +27,9 @@ spring.http.multipart.max-file-size=100MB
 #spring.redisson.address = 192.168.1.204:6379
 
 #######################################可在运行时动态配置#######################################
-##文本类型
-simText = txt,html,xml,java,properties,mp3,mp4,sql
-#多媒体类型
-media=mp3,mp4,flv,
-#文件转换编码
-converted.file.charset = GBK
+#文本类型，默认如下，可自定义添加
+#simText = txt,html,xml,properties,md,java,py,c,cpp,sql
+#多媒体类型，默认如下，可自定义添加
+#media = mp3,wav,mp4,flv
+#文件转换编码，默认根据操作系统获取
+#converted.file.charset = GBK
