--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -21,10 +21,11 @@ spring.http.multipart.max-file-size=100MB
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
 
-#缓存实现类型，不配默认为JDK实现，可配置为redis实现（需要配置spring.redisson.address等参数）
+#缓存实现类型，不配默认为内嵌RocksDB实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
 #cache.type = redis
 #redis连接
 #spring.redisson.address = 192.168.1.204:6379
+#spring.redisson.password = xxx
 
 #######################################可在运行时动态配置#######################################
 #文本类型，默认如下，可自定义添加
