word、ppt文档新增图片预览模式

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -34,3 +34,5 @@ spring.http.multipart.max-file-size=100MB
 #media = mp3,wav,mp4,flv
 #文件转换编码，默认根据操作系统获取
 #converted.file.charset = GBK
+#office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
+#office.preview.type = pdf
