--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -161,6 +161,16 @@
             <artifactId>rocksdbjni</artifactId>
             <version>5.17.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.15</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox-tools</artifactId>
+            <version>2.0.15</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
