--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -14,6 +14,7 @@ spring.freemarker.suffix = .ftl
 
 server.tomcat.uri-encoding = UTF-8
 #文件上传限制
+spring.http.multipart.max-request-size=100MB
 spring.http.multipart.max-file-size=100MB
 
 #文件资源路径（默认为打包根路径下的file目录下）
