支持7z文件预览

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -114,6 +114,12 @@
             <artifactId>junrar</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <!-- 解压(7z)-->
+        <dependency>
+            <groupId>org.tukaani</groupId>
+            <artifactId>xz</artifactId>
+            <version>1.8</version>
+        </dependency>
         <dependency>
             <groupId>net.sourceforge.jchardet</groupId>
             <artifactId>jchardet</artifactId>
