--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>kkFileView</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
 
 
     <properties>
