支持自动清理预览文件及缓存

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -27,6 +27,8 @@ spring.http.multipart.max-file-size=100MB
 #redis连接
 #spring.redisson.address = 192.168.1.204:6379
 #spring.redisson.password = xxx
+#缓存自动清理(每晚3点自动清理) true 为开启，注释掉或其他值都为关闭
+cache.clean = true
 
 #######################################可在运行时动态配置#######################################
 #文本类型，默认如下，可自定义添加
