加入是否启用缓存配置项

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -31,6 +31,9 @@ spring.http.multipart.max-file-size=100MB
 cache.clean = true
 
 #######################################可在运行时动态配置#######################################
+#是否启用缓存
+cache.enabled = false
+
 #文本类型，默认如下，可自定义添加
 #simText = txt,html,xml,properties,md,java,py,c,cpp,sql
 #多媒体类型，默认如下，可自定义添加
