新功能点：支持base url配置（主要用于nginx反向代理等）

--- a/jodconverter-web/src/main/conf/application.properties
+++ b/jodconverter-web/src/main/conf/application.properties
@@ -31,6 +31,9 @@ spring.http.multipart.max-file-size=100MB
 cache.clean = true
 
 #######################################可在运行时动态配置#######################################
+#提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
+#base.url = https://file.keking.cn
+
 #是否启用缓存
 cache.enabled = true
 
