优化：目录调整，符合maven规范；maven编译指定.sh脚本换行符为unix换行

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -194,7 +194,7 @@
                 <filtering>true</filtering>
             </resource>
             <resource>
-                <directory>src/main/conf</directory>
+                <directory>src/main/config</directory>
                 <excludes>
                     <exclude>${build.exclude.resource}</exclude>
                 </excludes>
@@ -210,7 +210,7 @@
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
-                        <descriptor>src/main/resources/assembly.xml</descriptor>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
