新功能点：缓存清理时间cron表达式支持自定义 link #I1147X

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -27,8 +27,9 @@ spring.http.multipart.max-file-size=100MB
 #redis连接
 #spring.redisson.address = 192.168.1.204:6379
 #spring.redisson.password = xxx
-#缓存自动清理(每晚3点自动清理) true 为开启，注释掉或其他值都为关闭
-cache.clean = true
+cache.clean.enabled = true
+#缓存自动清理时间，cache.clean.enabled = true时才有用，cron表达式，基于Quartz cron
+cache.clean.cron = 0 0 3 * * ?
 
 #######################################可在运行时动态配置#######################################
 #提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
