新功能点：所有配置项支持从环境变量里读取，方便Docker镜像部署

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -1,5 +1,5 @@
 #######################################不可动态配置，需要重启生效#######################################
-server.port = 8012
+server.port = ${KK_SERVER_PORT:8012}
 spring.http.encoding.charset = utf8
 ## Freemarker 配置
 spring.freemarker.template-loader-path = classpath:/web/
@@ -19,37 +19,39 @@ spring.http.multipart.max-file-size=100MB
 
 #文件资源路径（默认为打包根路径下的file目录下）
 #file.dir = D:\\kkFileview\\
+file.dir = ${KK_FILE_DIR:default}
 #openoffice home路径
 #office.home = C:\\Program Files (x86)\\OpenOffice 4
+office.home = ${KK_OFFICE_HOME:default}
 
-#缓存实现类型，不配默认为内嵌RocksDB实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
-#cache.type = redis
-#redis连接
-#spring.redisson.address = 192.168.1.204:6379
-#spring.redisson.password = xxx
-cache.clean.enabled = true
+#缓存实现类型，不配默认为内嵌RocksDB(type = default)实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
+cache.type =  ${KK_CACHE_TYPE:default}
+#redis连接，只有当cache.type = redis时才有用
+spring.redisson.address = ${KK_SPRING_REDISSON_ADDRESS:127.0.0.1:6379}
+spring.redisson.password = ${KK_SPRING_REDISSON_PASSWORD:123456}
+#缓存是否自动清理 true 为开启，注释掉或其他值都为关闭
+cache.clean.enabled = ${KK_CACHE_CLEAN_ENABLED:true}
 #缓存自动清理时间，cache.clean.enabled = true时才有用，cron表达式，基于Quartz cron
-cache.clean.cron = 0 0 3 * * ?
+cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 3 * * ?}
 
 #######################################可在运行时动态配置#######################################
 #提供预览服务的地址，默认从请求url读，如果使用nginx等反向代理，需要手动设置
 #base.url = https://file.keking.cn
+base.url = ${KK_BASE_URL:default}
 
 #是否启用缓存
-cache.enabled = true
+cache.enabled = ${KK_CACHE_ENABLED:true}
 
 #文本类型，默认如下，可自定义添加
-#simText = txt,html,xml,properties,md,java,py,c,cpp,sql
+simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
 #多媒体类型，默认如下，可自定义添加
-#media = mp3,wav,mp4,flv
-#文件转换编码，默认根据操作系统获取
-#converted.file.charset = GBK
+media = ${KK_MEDIA:mp3,wav,mp4,flv}
 #office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
-#office.preview.type = pdf
+office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 
 #预览源为FTP时 FTP用户名，可在ftp url后面加参数ftp.username=ftpuser指定，不指定默认用配置的
-ftp.username = ftpuser
+ftp.username = ${KK_FTP_USERNAME:ftpuser}
 #预览源为FTP时 FTP密码，可在ftp url后面加参数ftp.password=123456指定，不指定默认用配置的
-ftp.password = 123456
+ftp.password = ${KK_FTP_PASSWORD:123456}
 #预览源为FTP时, FTP连接默认ControlEncoding(根据FTP服务器操作系统选择，Linux一般为UTF-8，Windows一般为GBK)，可在ftp url后面加参数ftp.control.encoding=UTF-8指定，不指定默认用配置的
-ftp.control.encoding = UTF-8
+ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
