fix: 增加上下文filepreview

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -1,4 +1,5 @@
 #######################################不可动态配置，需要重启生效#######################################
+#server.contextPath=/filepreview/
 server.port = ${KK_SERVER_PORT:8012}
 spring.http.encoding.charset = utf8
 ## Freemarker 配置
