优化：服务器无法通过外网访问本地下载时，使用内网IP下载

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -1,5 +1,6 @@
 #######################################不可动态配置，需要重启生效#######################################
 server.port = ${KK_SERVER_PORT:8012}
+server.context-path = ${KK_CONTEXT_PATH:/}
 spring.http.encoding.charset = utf8
 ## Freemarker 配置
 spring.freemarker.template-loader-path = classpath:/web/
