配置：默认指定缓存实现为JDK实现

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -26,7 +26,7 @@ file.dir = ${KK_FILE_DIR:default}
 office.home = ${KK_OFFICE_HOME:default}
 
 #缓存实现类型，不配默认为内嵌RocksDB(type = default)实现，可配置为redis(type = redis)实现（需要配置spring.redisson.address等参数）和 JDK 内置对象实现（type = jdk）,
-cache.type =  ${KK_CACHE_TYPE:default}
+cache.type =  ${KK_CACHE_TYPE:jdk}
 #redis连接，只有当cache.type = redis时才有用
 spring.redisson.address = ${KK_SPRING_REDISSON_ADDRESS:127.0.0.1:6379}
 spring.redisson.password = ${KK_SPRING_REDISSON_PASSWORD:123456}
