构建脚本：编译时包含本地jar依赖

--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -211,6 +211,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
