--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.css linguist-language=java
+*.less linguist-language=java
+*.js linguist-language=java
+*.html linguist-language=java
+*.* linguist-language=java
