【新特性】支持限制预览源站点，保护预览服务不被滥用

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -40,6 +40,10 @@ cache.clean.cron = ${KK_CACHE_CLEAN_CRON:0 0 3 * * ?}
 #base.url = https://file.keking.cn
 base.url = ${KK_BASE_URL:default}
 
+#信任站点，多个用','隔开，设置了之后，会限制只能预览来自信任站点列表的文件，默认不限制
+#trust.host = file.keking.cn,kkfileview.keking.cn
+trust.host = ${KK_TRUST_HOST:default}
+
 #是否启用缓存
 cache.enabled = ${KK_CACHE_ENABLED:true}
 
