优化：默认启动水印

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -63,7 +63,7 @@ ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 
 #水印内容
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
-watermark.txt = ${WATERMARK_TXT:}
+watermark.txt = ${WATERMARK_TXT:kkFileView文件预览}
 #水印x轴间隔
 watermark.x.space = ${WATERMARK_X_SPACE:10}
 #水印y轴间隔
@@ -77,7 +77,7 @@ watermark.color = ${WATERMARK_COLOR:black}
 #水印透明度，要求设置在大于等于0.005，小于1
 watermark.alpha = ${WATERMARK_ALPHA:0.2}
 #水印宽度
-watermark.width = ${WATERMARK_WIDTH:240}
+watermark.width = ${WATERMARK_WIDTH:180}
 #水印高度
 watermark.height = ${WATERMARK_HEIGHT:80}
 #水印倾斜度数，要求设置在大于等于0，小于90
