--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -53,6 +53,8 @@ simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,,ja
 media = ${KK_MEDIA:mp3,wav,mp4,flv}
 #office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
 office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
+#是否禁止下载转换生成的pdf文件
+pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
 
 #预览源为FTP时 FTP用户名，可在ftp url后面加参数ftp.username=ftpuser指定，不指定默认用配置的
 ftp.username = ${KK_FTP_USERNAME:ftpuser}
@@ -82,3 +84,4 @@ watermark.width = ${WATERMARK_WIDTH:180}
 watermark.height = ${WATERMARK_HEIGHT:80}
 #水印倾斜度数，要求设置在大于等于0，小于90
 watermark.angle = ${WATERMARK_ANGLE:10}
+
