优化：重构大量代码，修复异常

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -48,7 +48,7 @@ trust.host = ${KK_TRUST_HOST:default}
 cache.enabled = ${KK_CACHE_ENABLED:true}
 
 #文本类型，默认如下，可自定义添加
-simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
+simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
 #多媒体类型，默认如下，可自定义添加
 media = ${KK_MEDIA:mp3,wav,mp4,flv}
 #office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
