更新文档&细节调整

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -65,7 +65,8 @@ ftp.control.encoding = ${KK_FTP_CONTROL_ENCODING:UTF-8}
 
 #水印内容
 #例：watermark.txt = ${WATERMARK_TXT:凯京科技内部文件，严禁外泄}
-watermark.txt = ${WATERMARK_TXT:kkFileView文件预览}
+#如需取消水印，内容设置为空即可，例：watermark.txt = ${WATERMARK_TXT:}
+watermark.txt = ${WATERMARK_TXT:}
 #水印x轴间隔
 watermark.x.space = ${WATERMARK_X_SPACE:10}
 #水印y轴间隔
