--- a/jodconverter-web/pom.xml
+++ b/jodconverter-web/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>cn.keking</groupId>
     <artifactId>kkFileView</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1</version>
 
 
     <properties>
@@ -192,6 +192,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/aspose-cad-19.9.jar</systemPath>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.owasp.esapi/esapi -->
+        <dependency>
+            <groupId>org.owasp.esapi</groupId>
+            <artifactId>esapi</artifactId>
+            <version>2.2.0.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
