--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -43,7 +43,7 @@ base.url = ${KK_BASE_URL:default}
 #信任站点，多个用','隔开，设置了之后，会限制只能预览来自信任站点列表的文件，默认不限制
 #trust.host = file.keking.cn,kkfileview.keking.cn
 #trust.host = ${KK_TRUST_HOST:default}
-trust.host = console.dbappcloud.com,aicso.dbappsecurity.com.cn,192.168.19.199,192.168.19.252
+trust.host = console.dbappcloud.com,aicso.dbappsecurity.com.cn,192.168.19.199,192.168.19.252,localhost
 
 #是否启用缓存
 cache.enabled = ${KK_CACHE_ENABLED:true}
