新增配置项office.preview.switch.disabled，控制offic文件预览切换开关

--- a/jodconverter-web/src/main/config/application.properties
+++ b/jodconverter-web/src/main/config/application.properties
@@ -53,6 +53,9 @@ simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log
 media = ${KK_MEDIA:mp3,wav,mp4,flv}
 #office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
 office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
+#是否关闭office预览切换开关，默认为false，可配置为true关闭
+office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
+
 #是否禁止下载转换生成的pdf文件
 pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
 
