引入cpdetector解决文件编码识别问题

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -193,6 +193,14 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/aspose-cad-19.9.jar</systemPath>
         </dependency>
+        <!-- 编码识别 -->
+        <dependency>
+            <groupId>cpdetector</groupId>
+            <artifactId>cpdetector</artifactId>
+            <version>1.04</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/cpdetector-1.04.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <resources>
