--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ nbdist/
 ### VS Code ###
 .vscode/
 
-jodconverter-web/src/main/cache/
-jodconverter-web/src/main/file/
+server/src/main/cache/
+server/src/main/file/
