引入galimatias,解决不规范文件名导致文件下载异常

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -201,6 +201,12 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/cpdetector-1.04.jar</systemPath>
         </dependency>
+        <!-- url 规范化 -->
+        <dependency>
+            <groupId>io.mola.galimatias</groupId>
+            <artifactId>galimatias</artifactId>
+            <version>0.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
