--- a/server/pom.xml
+++ b/server/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
         <!-- REDISSON -->
         <dependency>
             <groupId>org.redisson</groupId>
