新增 tiff 、tif 图像文件格式预览支持

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -1,7 +1,10 @@
 #######################################不可动态配置，需要重启生效#######################################
 server.port = ${KK_SERVER_PORT:8012}
-server.context-path = ${KK_CONTEXT_PATH:/}
-spring.http.encoding.charset = utf8
+server.servlet.context-path= ${KK_CONTEXT_PATH:/}
+server.servlet.encoding.charset = utf-8
+#文件上传限制
+spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
 ## Freemarker 配置
 spring.freemarker.template-loader-path = classpath:/web/
 spring.freemarker.cache = false
@@ -12,11 +15,6 @@ spring.freemarker.expose-request-attributes = true
 spring.freemarker.expose-session-attributes = true
 spring.freemarker.request-context-attribute = request
 spring.freemarker.suffix = .ftl
-
-server.tomcat.uri-encoding = UTF-8
-#文件上传限制
-spring.http.multipart.max-request-size=500MB
-spring.http.multipart.max-file-size=500MB
 
 #文件资源路径（默认为打包根路径下的file目录下）
 #file.dir = D:\\kkFileview\\
