解决前端传入的地址是外网访问的，服务器不能访问外网的问题

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -1,6 +1,6 @@
 #######################################不可动态配置，需要重启生效#######################################
 server.port = ${KK_SERVER_PORT:8012}
-server.servlet.context-path= ${KK_CONTEXT_PATH:/}
+server.servlet.context-path= /
 server.servlet.encoding.charset = utf-8
 #文件上传限制
 spring.servlet.multipart.max-file-size=500MB
@@ -87,3 +87,7 @@ watermark.height = ${WATERMARK_HEIGHT:80}
 #水印倾斜度数，要求设置在大于等于0，小于90
 watermark.angle = ${WATERMARK_ANGLE:10}
 
+# 文件预览外网地址替换为内网地址进行访问
+# 解决前端传入的地址是外网访问的，服务器不能访问外网的问题
+preview.paths[0].in = http://127.0.0.1
+preview.paths[0].out = http://localhost
