office plugin 转换进程、任务超时可配置

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -16,6 +16,12 @@ spring.freemarker.expose-session-attributes = true
 spring.freemarker.request-context-attribute = request
 spring.freemarker.suffix = .ftl
 
+# office-plugin
+## office转换服务的进程数，默认开启两个进程
+office.plugin.server.ports = 2001,2002
+## office 转换服务 task 超时时间，默认五分钟
+office.plugin.task.timeout = 5m
+
 #文件资源路径（默认为打包根路径下的file目录下）
 #file.dir = D:\\kkFileview\\
 file.dir = ${KK_FILE_DIR:default}
