--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -55,6 +55,11 @@ cache.enabled = ${KK_CACHE_ENABLED:true}
 simText = ${KK_SIMTEXT:txt,html,htm,asp,jsp,xml,json,properties,md,gitignore,log,java,py,c,cpp,sql,sh,bat,m,bas,prg,cmd}
 #多媒体类型，默认如下，可自定义添加
 media = ${KK_MEDIA:mp3,wav,mp4,flv}
+#是否开启多媒体类型转视频格式转换,目前可转换视频格式有：avi,mov,wmv,3gp,rm
+#请谨慎开启此功能，建议异步调用添加到处理队列，并且增加任务队列处理线程，防止视频转换占用完线程资源，转换比较耗费时间,并且控制了只能串行处理转换任务
+media.convert.disable = ${KK_MEDIA_CONVERT_DISABLE:false}
+#支持转换的视频类型
+convertMedias = ${KK_CONVERTMEDIAS:avi,mov,wmv,mkv,3gp,rm}
 #office类型文档(word ppt)样式，默认为图片(image)，可配置为pdf（预览时也有按钮切换）
 office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
