--- a/office-plugin/pom.xml
+++ b/office-plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>filepreview</artifactId>
         <groupId>cn.keking</groupId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>4.0.0</version>
     </parent>
 
     <artifactId>office-plugin</artifactId>
