feat(增加token校验): 增加token校验
1.使用http/https下载链接预览文件时,如果url中带有?会导致下载报错
2.当下载路径需要传递请求头做权限校验时,增加权限校验
	2.1.
在路径后拼接&token=xxx即可

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -249,6 +249,13 @@
             <classifier>windows-x86_64</classifier>
         </dependency>
 
+        <!-- okhttpClient -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.14.9</version>
+        </dependency>
+
 
     </dependencies>
 
