--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -99,4 +99,6 @@ watermark.width = ${WATERMARK_WIDTH:180}
 watermark.height = ${WATERMARK_HEIGHT:80}
 #水印倾斜度数，要求设置在大于等于0，小于90
 watermark.angle = ${WATERMARK_ANGLE:10}
+#配置下载文件时的token在header中的名字,默认Authorization
+request.auth.name=Authorization
 
