feat: 通过配置控制PDF.js viewer toolbar & secondaryToolbar功能按钮

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -65,8 +65,16 @@ office.preview.type = ${KK_OFFICE_PREVIEW_TYPE:image}
 #是否关闭office预览切换开关，默认为false，可配置为true关闭
 office.preview.switch.disabled = ${KK_OFFICE_PREVIEW_SWITCH_DISABLED:false}
 
+#是否禁止演示模式
+pdf.presentationMode.disable = ${KK_PDF_PRESENTATION_MODE_DISABLE:true}
+#是否禁止打开文件
+pdf.openFile.disable = ${KK_PDF_OPEN_FILE_DISABLE:true}
+#是否禁止打印转换生成的pdf文件
+pdf.print.disable = ${KK_PDF_PRINT_DISABLE:true}
 #是否禁止下载转换生成的pdf文件
 pdf.download.disable = ${KK_PDF_DOWNLOAD_DISABLE:true}
+#是否禁止bookmark
+pdf.bookmark.disable = ${KK_PDF_BOOKMARK_DISABLE:true}
 #是否禁用首页文件上传
 file.upload.disable = ${KK_FILE_UPLOAD_ENABLED:false}
 
