--- a/server/pom.xml
+++ b/server/pom.xml
@@ -250,6 +250,26 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.media</groupId>
+            <artifactId>jai_core</artifactId>
+            <version>1.1.2-beta</version>
+            <systemPath>${basedir}/lib/jai_core-1.1.2-beta.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.media</groupId>
+            <artifactId>jai_codec</artifactId>
+            <version>1.1.3</version>
+            <systemPath>${basedir}/lib/jai_codec-1.1.3.jar</systemPath>
+        </dependency>
+
     </dependencies>
 
     <build>
