* tif图片预览，在application.properties中加入tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}，可以控制使用tif、jpg、pdf方式预览。 修改相应代码，加入必要的判断处理。

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -106,3 +106,6 @@ watermark.height = ${WATERMARK_HEIGHT:80}
 #水印倾斜度数，要求设置在大于等于0，小于90
 watermark.angle = ${WATERMARK_ANGLE:10}
 
+#Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
+tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
+
