--- a/server/pom.xml
+++ b/server/pom.xml
@@ -260,6 +260,7 @@
             <groupId>javax.media</groupId>
             <artifactId>jai_core</artifactId>
             <version>1.1.2-beta</version>
+            <scope>system</scope>
             <systemPath>${basedir}/lib/jai_core-1.1.2-beta.jar</systemPath>
         </dependency>
 
@@ -267,6 +268,7 @@
             <groupId>javax.media</groupId>
             <artifactId>jai_codec</artifactId>
             <version>1.1.3</version>
+            <scope>system</scope>
             <systemPath>${basedir}/lib/jai_codec-1.1.3.jar</systemPath>
         </dependency>
 
