--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <packaging>pom</packaging>
 
     <groupId>cn.keking</groupId>
-    <artifactId>filepreview</artifactId>
-    <version>4.0.0</version>
+    <artifactId>kkFileView-parent</artifactId>
+    <version>4.1.0-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,7 +22,7 @@
         <module>server</module>
     </modules>
 
-    <name>file-online-preview</name>
+    <name>kkFileView-parent</name>
     <description>专注文件在线预览服务</description>
     <url>https://github.com/kekingcn/kkFileView</url>
 
