--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -107,5 +107,5 @@ watermark.height = ${WATERMARK_HEIGHT:80}
 watermark.angle = ${WATERMARK_ANGLE:10}
 
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
-tif.preview.type = ${KK_TIF_PREVIEW_TYPE:pdf}
+tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
