--- a/server/pom.xml
+++ b/server/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>kkFileView</artifactId>
 
+    <repositories>
+        <repository>
+            <!-- required for javax.media:jar_core -->
+            <id>geotoolkit</id>
+            <url>https://nexus.geomatys.com/repository/geotoolkit/</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -259,9 +267,9 @@
         <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jai_core</artifactId>
-            <version>1.1.2-beta</version>
+            <version>1.1.3</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/jai_core-1.1.2-beta.jar</systemPath>
+            <systemPath>${basedir}/lib/jai_core-1.1.3.jar</systemPath>
         </dependency>
 
         <dependency>
