修复文件流获取文件名错误的问题

--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -117,3 +117,5 @@ watermark.angle = ${WATERMARK_ANGLE:10}
 #Tif类型图片浏览模式：tif（利用前端js插件浏览）；jpg（转换为jpg后前端显示）；pdf（转换为pdf后显示，便于打印）
 tif.preview.type = ${KK_TIF_PREVIEW_TYPE:tif}
 
+#文件下载流URL中获取文件名的正则表达式
+file.stream-url.file-name.regex = ${KK_FILE_STREAM_URL_FILENAME_REGEX:[^\\/\\\\&\\?]+\\.\\w{1,4}(?=([\\?&].*$|$))}
